Corrected Flood inventory item spacing.

--- a/less/character-sheet.less
+++ b/less/character-sheet.less
@@ -246,6 +246,10 @@
         }
     }
 
+    .flood-item {
+        grid-template-columns: 1.75em auto 36px !important;
+    }
+
     .weight-tracker {
         height: 22px;
         width: 100%;
